[package]
name = "hydro-template"
publish = false
version = "0.0.0"
edition = "2024"

[dependencies]
hydro_lang = { git = "https://github.com/hydro-project/hydro.git", branch = "main" }
hydro_std = { git = "https://github.com/hydro-project/hydro.git", branch = "main" }
stageleft = "0.10.2"

[build-dependencies]
stageleft_tool = "0.10.2"

[dev-dependencies]
ctor = "0.2"
hydro_deploy = { git = "https://github.com/hydro-project/hydro.git", branch = "main" }
hydro_lang = { git = "https://github.com/hydro-project/hydro.git", branch = "main", features = [
    "deploy",
    "sim",
    "viz",
] }
tokio = { version = "1.29.0", features = ["full"] }
tokio-util = { version = "0.7.5", features = [ "codec" ] }
tokio-stream = { version = "0.1.3", default-features = false }
futures = "0.3.0"

[lints.clippy]
uninlined_format_args = "allow"
